force-app/main/default/objects/NC_Course_Publish__e/NC_Course_Publish__e.object-meta.xml
<CustomObject>
    <label>NC Course Publish</label>
    <pluralLabel>NC Course Publishes</pluralLabel>
</CustomObject>