force-app/main/default/objects/NC_Course_Publish__e/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>Full name / title of the course</description>
    <label>Course Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>