force-app/main/default/objects/NC_Course_Publish__e/fields/Credit_Hours__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hours__c</fullName>
    <description>CEUs sometimes exist</description>
    <label>Credit Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>