force-app/main/default/objects/NC_Course_Publish__e/fields/Extended_Description__c.field-meta.xml
<CustomField>
    <fullName>Extended_Description__c</fullName>
    <label>Extended Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>