force-app/main/default/objects/NC_Course_Publish__e/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <label>Short Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>